--- a/creAI/web/css/inputs.css
+++ b/creAI/web/css/inputs.css
@@ -47,7 +47,7 @@ button:focus {
 .number_input_wrapper {
 	height: calc(25px * var(--scaling-factor));
 	width: 100%;
-	margin: calc(25px * var(--scaling-factor)) auto calc(25px * var(--scaling-factor)) auto;
+	margin: calc(10px * var(--scaling-factor)) auto calc(10px * var(--scaling-factor)) auto;
 	background-color: rgba(0,0,0,0.2);
 	border-radius: var(--border-radius);
 	display: grid;
@@ -134,9 +134,36 @@ input[type=text] {
 
 }
 
+input[type=radio] {
+	opacity: 0;
+	position: fixed;
+}
 
+input[type=radio] + .radio_label{
+	display: inline-block;
+	margin: calc(5px * var(--scaling-factor));
+}
+
+input[type=radio] + .radio_label:before {
+	content: '';
+	display: inline-block;
+	width: calc(20px * var(--scaling-factor));
+	height: calc(20px * var(--scaling-factor));
+	margin-right: calc(5px * var(--scaling-factor));
+	background-color: rgba(0,0,0,0.2);
+	border-radius: var(--border-radius);
+}
+
+input[type=radio]:checked + .radio_label:before {
+	background-color: var(--accent-color);
+}
 
 label {
-	display: block;
+	display: inline;
 	color: inherit;
+}
+
+label:before {
+    content: '\A';
+    white-space: pre;
 }
